tests/lean/empty.lean.expected.out
empty.lean:5:25: error: type error in placeholder assigned to
  inhabited_Prop
placeholder has type
  inhabited Prop
but is expected to have type
  inhabited ?M_1
the assignment was attempted when trying to solve
    failed to synthesize placeholder
     ⊢ inhabited Empty
